@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+ * Fixed bug dealing with very large regions with the same value in
+   canvas-based Wiggle tracks (issue #157).
+
  * The arrow keys on the keyboard can now be used to pan and scroll
    around the genome view.
 
